minor fix: ipad navbar fixed and sm navbar aligned

--- a/assets/css/custom/style.css
+++ b/assets/css/custom/style.css
@@ -98,7 +98,7 @@ width: 100%;
     font-family: 'Oswald', sans-serif;
     font-size: 18px;
     position: relative;
-    left: 35px;
+    left: 130px;
 }
 
 
